--- a/wb_checker/logging.conf
+++ b/wb_checker/logging.conf
@@ -11,10 +11,10 @@ keys=consoleFormatter,fileFormatter,errorFormatter
 level=DEBUG
 handlers=consoleHandler,fileHandler,errorHandler
 
-[logger_spider]
+[logger_checker]
 level=DEBUG
 handlers=consoleHandler,fileHandler,errorHandler
-qualname=spider
+qualname=checker
 propagate=0
 
 [handler_consoleHandler]
